More updates with port current site to gh-pages.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 <div class="row">
+  <div class="col s12 center-align">
+    <h1>{{ site.title }}</h1>
+    <img src="assets/images/wordcloud.svg" />
+  </div>
   <div class="col s12">
     <h1>Upcomming Workshops</h1>
     <a href="#">3rd Eddition</a> co-located with CVPR'19<br/>
@@ -19,6 +23,30 @@ layout: default
   </div>
   <div class="col s6">
     <h1>List of Potential Ideas</h1>
+    <ul class="browser-default">
+	   <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
+	   <li>Communication and computation overlapping for better performance and energy</li>
+	   <li>Load balancing and efficient task distribution techniques</li>
+	   <li>Efficient hardware proposals to implement neural networks</li>
+	   <li>Power and performance efficient memory architectures suited for neural networks</li>
+	   <li>Approximation, quantization reduced precision computing techniques</li>
+	   <li>Exploring the interplay between precision, performance, power and energy</li>
+	   <li>Neural network architectures for resource constrained devices such as IoT and edge devices</li>
+	   <li>Exploration of new and efficient applications for machine learning</li>
+	   <li>Hardware/software techniques to exploit sparsity and locality</li>
+	   <li>Machine learning benchmarks, workloads and their characterization</li>
+	   <li>Performance potential, limit studies, bottleneck analysis, profiling and synthesis of workloads</li>
+	   <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
+	   <li>Power, Performance and Area (PPA) based comparison of neural networks</li>
+	   <li>Network pruning, tuning and reconfigurable techniques for efficient neural networks</li>
+	   <li>Verification, validation and determinism in neural networks</li>
+	   <li>Efficient on-device learning techniques -- supervised vs unsupervised</li>
+	   <li>Optimizations to improve performance of conventional training techniques</li>
+	   <li>Inference vs training comparison and analysis in terms of power, performance and complexity</li>
+	   <li>Support vector machines (SVM) based solutions</li>
+	   <li>Systolic array based architectures and systems for machine learning applications</li>
+	   <li>Security, safety and privacy challenges and building secure AI systems</li>
+    </ul>
   </div>
 </div>
 
