Tweaks to headers and content sizing.

--- a/index.html
+++ b/index.html
@@ -3,52 +3,77 @@ layout: default
 ---
 <div class="row">
   <div class="col s12 center-align">
-    <h1>{{ site.title }}</h1>
-    <img src="assets/images/wordcloud.svg" />
-  </div>
-  <div class="col s12">
-    <h1>Upcomming Workshops</h1>
-    <a href="#">3rd Eddition</a> co-located with CVPR'19<br/>
-    <a href="#">4th Eddition</a> co-located with ISCA'19<br/>
-  </div>
-  <div class="col s6">
-    <h1>Objectives</h1>
-    <p>
-      As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many new forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the discussion and dialogues on energy efficient techniques for cognitive computing and machine learning particularly for embedded applications and systems. For such resource constrained environments, performance alone is never sufficient, requiring system designers to balance performance with power, energy, and area (overall PPA metric).</p>
-<p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of energy efficient machine learning and artificial intelligence for embedded applications. We also hope to provide a solid platform for forging relationships and exchange of ideas between the industry and the academic world through discussions and active collaborations.</p>
-    <h1>Call for Papers</h1>
-    <p>
-      A new wave of intelligent computing, driven by recent advances in machine learning and cognitive algorithms coupled with process technology and new design methodologies, has the potential to usher unprecedented disruption in the way conventional computing solutions are designed and deployed. These new and innovative approaches often provide an attractive and efficient alternative not only in terms of performance but also power, energy, and area. This disruption is easily visible across the whole spectrum of computing systems -- ranging from low end mobile devices to large scale data centers and servers.</p>
-<p>A key class of these intelligent solutions is providing real-time, on-device cognition at the edge to enable many novel applications including vision and image processing, language translation, autonomous driving,  malware detection, and gesture recognition. Naturally, these applications have diverse requirements for performance,energy, reliability, accuracy, and security that demand a holistic approach to designing the hardware, software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
-  </div>
-  <div class="col s6">
-    <h1>List of Potential Ideas</h1>
-    <ul class="browser-default">
-	   <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
-	   <li>Communication and computation overlapping for better performance and energy</li>
-	   <li>Load balancing and efficient task distribution techniques</li>
-	   <li>Efficient hardware proposals to implement neural networks</li>
-	   <li>Power and performance efficient memory architectures suited for neural networks</li>
-	   <li>Approximation, quantization reduced precision computing techniques</li>
-	   <li>Exploring the interplay between precision, performance, power and energy</li>
-	   <li>Neural network architectures for resource constrained devices such as IoT and edge devices</li>
-	   <li>Exploration of new and efficient applications for machine learning</li>
-	   <li>Hardware/software techniques to exploit sparsity and locality</li>
-	   <li>Machine learning benchmarks, workloads and their characterization</li>
-	   <li>Performance potential, limit studies, bottleneck analysis, profiling and synthesis of workloads</li>
-	   <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
-	   <li>Power, Performance and Area (PPA) based comparison of neural networks</li>
-	   <li>Network pruning, tuning and reconfigurable techniques for efficient neural networks</li>
-	   <li>Verification, validation and determinism in neural networks</li>
-	   <li>Efficient on-device learning techniques -- supervised vs unsupervised</li>
-	   <li>Optimizations to improve performance of conventional training techniques</li>
-	   <li>Inference vs training comparison and analysis in terms of power, performance and complexity</li>
-	   <li>Support vector machines (SVM) based solutions</li>
-	   <li>Systolic array based architectures and systems for machine learning applications</li>
-	   <li>Security, safety and privacy challenges and building secure AI systems</li>
-    </ul>
+    <h4>{{ site.title }}</h4>
   </div>
 </div>
 
+<div class="row">
+  <div class="col s8 offset-s2 center-align">
+    <img src="assets/images/wordcloud.svg" class="title-image"/>
+  </div>
+</div>
 
+<div class="row">
+  <div class="col s12">
+    <h5>Upcomming Workshops</h5>
+    <a href="#">3rd Eddition</a> co-located with CVPR'19<br />
+    <a href="#">4th Eddition</a> co-located with ISCA'19<br />
+  </div>
+</div>
 
+<div class="row">
+  <div class="col s6">
+    <h5>Objectives</h5>
+    <p>
+      As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many
+      new forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the
+      discussion and dialogues on energy efficient techniques for cognitive computing and machine learning particularly
+      for embedded applications and systems. For such resource constrained environments, performance alone is never
+      sufficient, requiring system designers to balance performance with power, energy, and area (overall PPA metric).
+    </p>
+    <p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of
+      energy efficient machine learning and artificial intelligence for embedded applications. We also hope to provide a
+      solid platform for forging relationships and exchange of ideas between the industry and the academic world through
+      discussions and active collaborations.</p>
+    <h5>Call for Papers</h5>
+    <p>
+      A new wave of intelligent computing, driven by recent advances in machine learning and cognitive algorithms
+      coupled with process technology and new design methodologies, has the potential to usher unprecedented disruption
+      in the way conventional computing solutions are designed and deployed. These new and innovative approaches often
+      provide an attractive and efficient alternative not only in terms of performance but also power, energy, and area.
+      This disruption is easily visible across the whole spectrum of computing systems -- ranging from low end mobile
+      devices to large scale data centers and servers.</p>
+    <p>A key class of these intelligent solutions is providing real-time, on-device cognition at the edge to enable many
+      novel applications including vision and image processing, language translation, autonomous driving, malware
+      detection, and gesture recognition. Naturally, these applications have diverse requirements for
+      performance,energy, reliability, accuracy, and security that demand a holistic approach to designing the hardware,
+      software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
+  </div>
+  <div class="col s6 hide-on-small-only">
+    <h5>List of Potential Ideas</h5>
+    <ul class="browser-default">
+      <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
+      <li>Communication and computation overlapping for better performance and energy</li>
+      <li>Load balancing and efficient task distribution techniques</li>
+      <li>Efficient hardware proposals to implement neural networks</li>
+      <li>Power and performance efficient memory architectures suited for neural networks</li>
+      <li>Approximation, quantization reduced precision computing techniques</li>
+      <li>Exploring the interplay between precision, performance, power and energy</li>
+      <li>Neural network architectures for resource constrained devices such as IoT and edge devices</li>
+      <li>Exploration of new and efficient applications for machine learning</li>
+      <li>Hardware/software techniques to exploit sparsity and locality</li>
+      <li>Machine learning benchmarks, workloads and their characterization</li>
+      <li>Performance potential, limit studies, bottleneck analysis, profiling and synthesis of workloads</li>
+      <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
+      <li>Power, Performance and Area (PPA) based comparison of neural networks</li>
+      <li>Network pruning, tuning and reconfigurable techniques for efficient neural networks</li>
+      <li>Verification, validation and determinism in neural networks</li>
+      <li>Efficient on-device learning techniques -- supervised vs unsupervised</li>
+      <li>Optimizations to improve performance of conventional training techniques</li>
+      <li>Inference vs training comparison and analysis in terms of power, performance and complexity</li>
+      <li>Support vector machines (SVM) based solutions</li>
+      <li>Systolic array based architectures and systems for machine learning applications</li>
+      <li>Security, safety and privacy challenges and building secure AI systems</li>
+    </ul>
+  </div>
+</div>
