Trying alterative order for css classes.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 </div>
 
 <div class="row">
-  <div class="col m6 s12">
+  <div class="col s12 m6">
     <h5>Objectives</h5>
     <p>
       As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many
@@ -49,7 +49,7 @@ layout: default
       performance,energy, reliability, accuracy, and security that demand a holistic approach to designing the hardware,
       software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
   </div>
-  <div class="col m6 hide-on-small-only">
+  <div class="col s12 m6">
     <h5>List of Potential Ideas</h5>
     <ul class="browser-default">
       <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
