Updates and moved files for old editions to new folder.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ permalink: /index
       sufficient, requiring system designers to balance performance with power, energy, and area (overall PPA metric).
     </p>
     <p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of
-      energy efficient machine learning and artificial intelligence for embedded applications. We also hope to provide a
+      energy efficient machine learning and artificial intelligence for embedded applications. We also hope to psrovide a
       solid platform for forging relationships and exchange of ideas between the industry and the academic world through
       discussions and active collaborations.</p>
     <h5>Call for Papers</h5>
