--- a/submission.html
+++ b/submission.html
@@ -5,14 +5,45 @@ permalink: /submission
 <div class="row">
     <div class="col s12">
         <ul class="tabs">
-            <li class="tab col s3"><a href="#cvpr19">CVR'19</a></li>
+            <li class="tab col s3"><a href="#cvpr19">CVPR'19</a></li>
             <li class="tab col s3"><a class="active" href="#isca19">ISCA'19</a></li>
         </ul>
     </div>
     <div id="cvpr19" class="col s12">
+        <h4>Important Dates</h4>
+        <table>
+            <tbody>
+                <tr>
+                    <td>Paper Submission</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Acceptance and Rebuttals</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Camera Ready</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Workshop</td>
+                    <td>June 16th, 2019</td>
+                </tr>
+            </tbody>
+        </table>
+        <h4>Submission Guidelines</h4>
+        {% include submission_guidelines_default.html %}
+        <br /><br />
+
         <p>Due to half-day schedule and overwhelming responses, we are forced to skip short paper presentation track
             from the 3rd edition of EMC2 co-located with CVPR'19.</p>
         <p>Please consider submitting your workshop paper to our 4th edition of EMC2 co-located with ISCA'19.</p>
+
+        <div class="center-align">
+            <a class="waves-effect waves-light btn-large disabled">
+                Submit to CVPR'19 <i class="material-icons right">send</i>
+            </a>
+        </div>
     </div>
     <div id="isca19" class="col s12">
         <h4>Important Dates</h4>
@@ -36,12 +67,16 @@ permalink: /submission
                 </tr>
             </tbody>
         </table>
+
         <h4>Submission Guidelines</h4>
         {% include submission_guidelines_default.html %}
-        <br/><br/>
-        <a class="waves-effect waves-light btn-large center-align" href="https://easychair.org/conferences/?conf=emc21"
-            target="_blank">
-            Submit to ISCA'19 <i class="material-icons right">send</i>
-        </a>
+        <br /><br />
+
+        <div class="center-align">
+            <a class="waves-effect waves-light btn-large center-align" href="https://easychair.org/conferences/?conf=emc21"
+                target="_blank">
+                Submit to ISCA'19 <i class="material-icons right">send</i>
+            </a>
+        </div>
     </div>
 </div>
