Updates to PC page.

--- a/program-committee.html
+++ b/program-committee.html
@@ -5,12 +5,41 @@ permalink: /program-committee
 <div class="row">
     <div class="col s12 m6">
         <h5>Program Committee</h5>
-
+        <ul class="browser-default">
+            <li>Raj Parihar, Tensilica/Cadence</li>
+            <li>Michael Goldfarb, Nvidia</li>
+            <li>Chen Ding, University of Rochester</li>
+            <li>Mahdi Bojnordi, University of Utah</li>
+            <li>Andy Glew, Nvidia</li>
+            <li>Sreepathi Pai, University of Rochester</li>
+            <li>Raj Jain, Washington University in St. Louis</li>
+            <li>Smruti R Sarangi, IIT Delhi</li>
+            <li>Shaoshan Liu, PerceptIn</li>
+            <li>Ali Shafiee, Samsung</li>
+            <li>Satyam Srivastava, Intel</li>
+            <li>Danian Gong, Cadence</li>
+            <li>Debu Pal, Cadence</li>
+            <li>Krishna Nagar, Intel</li>
+            <li>Tao Sheng, Amazon</li>
+        </ul>
     </div>
     <div class="col s12 m6">
-        <h5>Extended Review Committee</h5>
+        <h5>Publicity and Outreach Chairs</h5>
         <ul class="browser-default">
-            <li></li>
+            <li>Debu Pal, Cadence</li>
+            <li>Mahdi Bojnordi, University of Utah</li>
+            <li>Krishna Nagar, Intel​</li>
+        </ul>
+        <h5>Submission and Pulbication Chairs Chairs</h5>
+        <ul class="browser-default">
+            <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
+            <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
+            <li>Krishna Nagar, Intel​</li>
+        </ul>
+        <h5>Publicity and Outreach Chairs</h5>
+        <ul class="browser-default">
+            <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
+            <li>Michael Goldfarb, Nvidia (mgoldfarb@nvidia.com)</li>
         </ul>
     </div>
 </div>
