--- a/program-committee.html
+++ b/program-committee.html
@@ -34,9 +34,8 @@ permalink: /program-committee
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
             <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
-            <li>Krishna Nagar, Intel​</li>
         </ul>
-        <h5>Publicity and Outreach Chairs</h5>
+        <h5>General Chairs</h5>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
             <li>Michael Goldfarb, Nvidia (mgoldfarb@nvidia.com)</li>
