All edition pages will use a fixed template. Ediiton pages are now part of a collection for easy query and generation.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: /index
 
 <div class="row">
   <div class="col s8 offset-s2 center-align">
-    <img src="assets/images/wordcloud.svg" class="title-image"/>
+    <img src="assets/images/wordcloud.svg" class="responsive-img" />
   </div>
 </div>
 
