--- a/submission.html
+++ b/submission.html
@@ -36,8 +36,8 @@ permalink: /submission
         <br /><br />
 
         <p>Due to half-day schedule and overwhelming responses, we are forced to skip short paper presentation track
-            from the 3rd edition of EMC2 co-located with CVPR'19.</p>
-        <p>Please consider submitting your workshop paper to our 4th edition of EMC2 co-located with ISCA'19.</p>
+            from the 3rd edition of EMC2 co-located with CVPR'19. Please consider submitting your workshop paper to our
+            4th edition of EMC2 co-located with ISCA'19.</p>
 
         <div class="center-align">
             <a class="waves-effect waves-light btn-large disabled">
@@ -73,8 +73,8 @@ permalink: /submission
         <br /><br />
 
         <div class="center-align">
-            <a class="waves-effect waves-light btn-large center-align" href="https://easychair.org/conferences/?conf=emc21"
-                target="_blank">
+            <a class="waves-effect waves-light btn-large center-align"
+                href="https://easychair.org/conferences/?conf=emc21" target="_blank">
                 Submit to ISCA'19 <i class="material-icons right">send</i>
             </a>
         </div>
