--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -4,6 +4,7 @@ permalink: /asplos-18
 edition_number: 1st
 colocated_short: ASPLOS 2018
 colocated_long: 23rd ACM International Conference on Architectural Support for Programming Languages and Operating Systems
+colocated_url: https://www.asplos2018.org/
 event_date: March 25th, 2018
 event_location: Williamsburg, VA
 header_image: assets/images/asplos-18.jpg
