--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -4,6 +4,7 @@ permalink: /hpca-19
 edition_number: 2nd
 colocated_short: HPCA 2019
 colocated_long: 25th IEEE International Symposium on High-Performance Computer Architecture
+colocated_url: http://hpca2019.seas.gwu.edu/
 event_date: February 17th, 2019
 event_location: Washington D.C.
 header_image: assets/images/hpca-19.jpg
