--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -4,6 +4,7 @@ permalink: /cvpr-19
 edition_number: 3rd
 colocated_short: CVPR 2019
 colocated_long: 30th IEEE/CVF Conference on Computer Vision and Pattern Recognition
+colocated_url: http://cvpr2019.thecvf.com/
 event_date: June 16th, 2019
 event_location: Long Beach, CA
 header_image: assets/images/cvpr-19.jpg
