--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -4,6 +4,7 @@ permalink: /isca-19
 edition_number: 4th
 colocated_short: ISCA 2019
 colocated_long: 46th International Symposium on Computer Architecture
+colocated_url: https://iscaconf.org/isca2019/
 event_date: June 23rd, 2019
 event_location: Phoenix, AZ
 header_image: assets/images/isca-19.jpg
