Styling updates and more properties.

--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -8,4 +8,6 @@ colocated_url: https://iscaconf.org/isca2019/
 event_date: June 23rd, 2019
 event_location: Phoenix, AZ
 header_image: assets/images/isca-19.jpg
+is_upcomming: True
+is_accepting_submission: True
 ---
