--- a/submission.html
+++ b/submission.html
@@ -2,81 +2,49 @@
 layout: default
 permalink: /submission
 ---
+<h3 class="blue-grey-text">Submit to the Workshop</h3>
 <div class="row">
-    <div class="col s12">
-        <ul class="tabs">
-            <li class="tab col s3"><a href="#cvpr19">CVPR'19</a></li>
-            <li class="tab col s3"><a class="active" href="#isca19">ISCA'19</a></li>
-        </ul>
+    <p>
+        Due to half-day schedule and overwhelming responses, we are forced to skip short paper presentation track from
+        the 3rd edition of EMC2 co-located with CVPR 2019. Please consider submitting your workshop paper to our 4th
+        edition of EMC2 co-located with ISCA 2019.</p>
+
+    <p><strong>​All papers will be submitted, reviewed, and notified through the EasyChair conference management
+            service. Please
+            visit the link below to proceed with the submission.</strong></p>
+</div>
+<div class="row">
+    <h4 class="blue-grey-text">Important Dates</h4>
+    <table>
+        <tbody>
+            <tr>
+                <td>Paper Submission</td>
+                <td><strong>May 27th, 2019 (23:59 PST)</strong></td>
+            </tr>
+            <tr>
+                <td>Acceptance and Rebuttals</td>
+                <td>June 10th, 2019</td>
+            </tr>
+            <tr>
+                <td>Camera Ready</td>
+                <td>June 17th, 2019</td>
+            </tr>
+            <tr>
+                <td>Workshop</td>
+                <td>June 23rd, 2019</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h4 class="blue-grey-text">Submission Guidelines</h4>
+    {% include submission_guidelines_default.html %}
+    <br /><br />
+
+    <div class="center-align">
+        <a class="waves-effect waves-light btn-large center-align" href="https://easychair.org/conferences/?conf=emc21"
+            target="_blank">
+            Submit to EMC<sup>2</sup> <i class="material-icons right">send</i>
+        </a>
     </div>
-    <div id="cvpr19" class="col s12">
-        <h4>Important Dates</h4>
-        <table>
-            <tbody>
-                <tr>
-                    <td>Paper Submission</td>
-                    <td>N/A</td>
-                </tr>
-                <tr>
-                    <td>Acceptance and Rebuttals</td>
-                    <td>N/A</td>
-                </tr>
-                <tr>
-                    <td>Camera Ready</td>
-                    <td>N/A</td>
-                </tr>
-                <tr>
-                    <td>Workshop</td>
-                    <td>June 16th, 2019</td>
-                </tr>
-            </tbody>
-        </table>
-        <h4>Submission Guidelines</h4>
-        {% include submission_guidelines_default.html %}
-        <br /><br />
-
-        <p>Due to half-day schedule and overwhelming responses, we are forced to skip short paper presentation track
-            from the 3rd edition of EMC2 co-located with CVPR'19. Please consider submitting your workshop paper to our
-            4th edition of EMC2 co-located with ISCA'19.</p>
-
-        <div class="center-align">
-            <a class="waves-effect waves-light btn-large disabled">
-                Submit to CVPR'19 <i class="material-icons right">send</i>
-            </a>
-        </div>
-    </div>
-    <div id="isca19" class="col s12">
-        <h4>Important Dates</h4>
-        <table>
-            <tbody>
-                <tr>
-                    <td>Paper Submission</td>
-                    <td>May 27th, 2019 (11.59 pm PST)</td>
-                </tr>
-                <tr>
-                    <td>Acceptance and Rebuttals</td>
-                    <td>June 10th, 2019</td>
-                </tr>
-                <tr>
-                    <td>Camera Ready</td>
-                    <td>June 17th, 2019</td>
-                </tr>
-                <tr>
-                    <td>Workshop</td>
-                    <td>June 23rd, 2019</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h4>Submission Guidelines</h4>
-        {% include submission_guidelines_default.html %}
-        <br /><br />
-
-        <div class="center-align">
-            <a class="waves-effect waves-light btn-large center-align"
-                href="https://easychair.org/conferences/?conf=emc21" target="_blank">
-                Submit to ISCA'19 <i class="material-icons right">send</i>
-            </a>
-        </div>
-    </div>
+</div>
 </div>
