--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -8,4 +8,5 @@ colocated_url: http://cvpr2019.thecvf.com/
 event_date: June 16th, 2019
 event_location: Long Beach, CA
 header_image: assets/images/cvpr-19.jpg
+is_upcomming: True
 ---
