--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@ permalink: /index
 ---
 <div class="row">
   <div class="col s12 center-align">
-    <h4>{{ site.title }}</h4>
+    <h3 class="blue-grey-text">{{ site.title }}</h3>
   </div>
 </div>
 
 <div class="row">
   <div class="col s8 offset-s2 center-align">
-    <img src="assets/images/wordcloud.svg" class="responsive-img" />
+    <img src="assets/images/wordcloud.svg" class="responsive-img" style="max-height: 300px;" />
   </div>
 </div>
 
 <div class="row">
   <div class="col s12">
-    <h5>Upcomming Workshops</h5>
-    <a href="#">3rd Eddition</a> co-located with CVPR'19<br />
-    <a href="#">4th Eddition</a> co-located with ISCA'19<br />
+    <h5 class="blue-grey-text text-darken-2"><i class="material-icons">memory</i> Upcomming Workshops</h5>
+    <ul class="collection">
+        {% for ed in site.editions %}
+          {% if ed.is_upcomming %}
+          <li class="collection-item">
+            <a href="{{ ed.url }}">{{ ed.edition_number }} Edition</a> on {{ ed.event_date }} in {{ ed.event_location }} co-located with
+            <a href="{{ ed.colocated_url }}" target="_blank">{{ ed.colocated_short }}</a>
+            {% if ed.is_accepting_submission %}
+            <a href="/submission">
+                <span class="new badge" data-badge-caption="">Accepting Submissions!</span>
+            </a>
+            {% endif %}
+          </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
   </div>
 </div>
 
 <div class="row">
   <div class="col s12 m6">
-    <h5>Objectives</h5>
+    <h5 class="blue-grey-text text-darken-2"><i class="material-icons">description</i> Objectives</h5>
     <p>
       As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many
       new forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the
@@ -36,7 +49,7 @@ permalink: /index
       energy efficient machine learning and artificial intelligence for embedded applications. We also hope to psrovide a
       solid platform for forging relationships and exchange of ideas between the industry and the academic world through
       discussions and active collaborations.</p>
-    <h5>Call for Papers</h5>
+    <h5 class="blue-grey-text text-darken-2"><i class="material-icons">chat</i> Call for Papers</h5>
     <p>
       A new wave of intelligent computing, driven by recent advances in machine learning and cognitive algorithms
       coupled with process technology and new design methodologies, has the potential to usher unprecedented disruption
@@ -51,7 +64,7 @@ permalink: /index
       software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
   </div>
   <div class="col s12 m6">
-    <h5>List of Potential Ideas</h5>
+    <h5 class="blue-grey-text text-darken-2"><i class="material-icons">format_list_bulleted</i> List of Potential Ideas</h5>
     <ul class="browser-default">
       <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
       <li>Communication and computation overlapping for better performance and energy</li>
