--- a/404.html
+++ b/404.html
@@ -1,9 +1,6 @@
 ---
 layout: default
 ---
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<h1 class="header">404</h1>
+<p><strong>Page not found :(</strong></p>
+<p>The requested page could not be found.</p>
