--- a/previous-edditions.html
+++ b/previous-edditions.html
@@ -2,10 +2,10 @@
 layout: default
 permalink: /previous-editions
 ---
-<h3 class="blue-grey-text">Previous Editions</h3>
+<h3 class="header">Previous Editions</h3>
 
 <ul class="collection">
-  {% for ed in site.editions %}
+  {% for ed in site.editions | reverse %}
     <li class="collection-item">
       <a href="{{ ed.url }}">{{ ed.edition_number }} Edition</a> on {{ ed.event_date }} co-located with <a href="{{ ed.colocated_url }}" target="_blank">{{ ed.colocated_short }}</a>
     </li>
