--- a/program-committee.html
+++ b/program-committee.html
@@ -3,8 +3,13 @@ layout: default
 permalink: /program-committee
 ---
 <div class="row">
+    <div class="col s12">
+        <h3 class="header">Committees</h3>
+    </div>
+</div>
+<div class="row">
     <div class="col s12 m6">
-        <h5>Program Committee</h5>
+        <h5 class="header">Program Committee</h5>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence</li>
             <li>Michael Goldfarb, Nvidia</li>
@@ -24,18 +29,18 @@ permalink: /program-committee
         </ul>
     </div>
     <div class="col s12 m6">
-        <h5>Publicity and Outreach Chairs</h5>
+        <h5 class="header">Publicity and Outreach Chairs</h5>
         <ul class="browser-default">
             <li>Debu Pal, Cadence</li>
             <li>Mahdi Bojnordi, University of Utah</li>
             <li>Krishna Nagar, Intel​</li>
         </ul>
-        <h5>Submission and Pulbication Chairs Chairs</h5>
+        <h5 class="header">Submission and Pulbication Chairs Chairs</h5>
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
             <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
         </ul>
-        <h5>General Chairs</h5>
+        <h5 class="header">General Chairs</h5>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
             <li>Michael Goldfarb, Nvidia (mgoldfarb@nvidia.com)</li>
