--- a/submission.html
+++ b/submission.html
@@ -1,50 +1,74 @@
 ---
 layout: default
 permalink: /submission
+show_note: True
 ---
-<h3 class="blue-grey-text">Submit to the Workshop</h3>
+<h3 class="header">Submit to the Workshop</h3>
+
+{% if page.show_note %}
 <div class="row">
-    <p>
-        Due to half-day schedule and overwhelming responses, we are forced to skip short paper presentation track from
-        the 3rd edition of EMC2 co-located with CVPR 2019. Please consider submitting your workshop paper to our 4th
-        edition of EMC2 co-located with ISCA 2019.</p>
-
-    <p><strong>​All papers will be submitted, reviewed, and notified through the EasyChair conference management
-            service. Please
-            visit the link below to proceed with the submission.</strong></p>
-</div>
-<div class="row">
-    <h4 class="blue-grey-text">Important Dates</h4>
-    <table>
-        <tbody>
-            <tr>
-                <td>Paper Submission</td>
-                <td><strong>May 27th, 2019 (23:59 PST)</strong></td>
-            </tr>
-            <tr>
-                <td>Acceptance and Rebuttals</td>
-                <td>June 10th, 2019</td>
-            </tr>
-            <tr>
-                <td>Camera Ready</td>
-                <td>June 17th, 2019</td>
-            </tr>
-            <tr>
-                <td>Workshop</td>
-                <td>June 23rd, 2019</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h4 class="blue-grey-text">Submission Guidelines</h4>
-    {% include submission_guidelines_default.html %}
-    <br /><br />
-
-    <div class="center-align">
-        <a class="waves-effect waves-light btn-large center-align" href="https://easychair.org/conferences/?conf=emc21"
-            target="_blank">
-            Submit to EMC<sup>2</sup> <i class="material-icons right">send</i>
-        </a>
+    <div class="col s12">
+        <blockquote class="z-depth-1">
+            <p style="padding: 1rem;">
+                Due to the half-day schedule and overwhelming responses received, we are forced to skip short paper presentation track from
+                the <a href="cvpr-19">3rd edition</a> of EMC2. Please consider submitting your workshop paper to the <a href="isca-19">4th edition</a>
+                of EMC2 co-located with ISCA 2019.</p>
+        </blockquote>
     </div>
 </div>
+{% endif %}
+
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Important Dates</h5>
+        <table>
+            <tbody>
+                <tr>
+                    <td>Paper Submission</td>
+                    <td><strong>May 27th, 2019 (23:59 PST)</strong></td>
+                </tr>
+                <tr>
+                    <td>Acceptance and Rebuttals</td>
+                    <td>June 10th, 2019</td>
+                </tr>
+                <tr>
+                    <td>Camera Ready</td>
+                    <td>June 17th, 2019</td>
+                </tr>
+                <tr>
+                    <td>Workshop</td>
+                    <td>June 23rd, 2019</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Submission Guidelines</h5>
+        <ul class="browser-default">
+                <li>Papers can describe an early-stage research project, advocate an opinion about machine learning and
+                    cognitive computing, reflect on trends in the community, or present anything interesting and worth
+                    exploring as a direction.</li>
+                <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
+                <li>Papers <em>MUST</em> use the <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.sigplan.org%2FResources%2FAuthor%2F&sa=D&sntz=1&usg=AFQjCNEfT-oLcvlS7z1DCpLyJoVISFs6XA">formatting guidelines for SIGPLAN conferences</a>.</li>
+                <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
+                <li>Text must be in no smaller than 10pt font size.</li>
+                <li>Review is single-blind, so please include authors’ names and affiliations on the submitted PDF.</li>
+                <li>All accepted papers will be posted to workshop website for download.</li>
+                <li>Accepted papers will be presented in short talk sessions at the workshop.</li>
+                <li>Authors are encouraged to provide artifacts to be included with their final papers.</li>
+                <li>If you have any issues, please email the publication and submission chairs Satyam Srivastava (<a href="mailto:satyam.srivastava@intel.com">satyam.srivastava@intel.com</a>) and Tao Sheng (<a href="mailto:tsheng@amazon.com">tsheng@amazon.com</a></li>
+            </ul>
+        <br /><br />
+        <p><strong>​All papers will be submitted, reviewed, and notified through the EasyChair conference management
+                service. Please
+                visit the link below to proceed with the submission.</strong></p>
+        <div class="center-align">
+            <a class="waves-effect waves-light btn-large center-align"
+                href="https://easychair.org/conferences/?conf=emc21" target="_blank">
+                Submit to EMC<sup>2</sup> (ISCA 2019) <i class="material-icons right">send</i>
+            </a>
+        </div>
+    </div>
 </div>
