--- a/index.html
+++ b/index.html
@@ -59,29 +59,24 @@ permalink: /index
       software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
   </div>
   <div class="col s12 m6">
-    <h5 class="header"><i class="material-icons">format_list_bulleted</i> List of Potential Ideas</h5>
-    <ul class="browser-default">
-      <li>Computing techniques for IoT, edge devices, automotive, and mobile intelligence</li>
+    <h5 class="header"><i class="material-icons">format_list_bulleted</i> Topics for the Workshop</h5>
+    <ul class="browser-default list">
+      <li>Architectures for IoT, edge devices, automotive, and mobile</li>
+      <li>Power and performance efficient memory architectures suited for neural networks</li>
+      <li>Approximation, quantization reduced precision computing</li>
+      <li>Hardware/software techniques to exploit sparsity</li>
+      <li>Neural network architectures for resource constrained devices</li>
+      <li>Neural network pruning, tuning and and automatic architecture search</li>
       <li>Communication and computation overlapping for better performance and energy</li>
       <li>Load balancing and efficient task distribution techniques</li>
-      <li>Efficient hardware proposals to implement neural networks</li>
-      <li>Power and performance efficient memory architectures suited for neural networks</li>
-      <li>Approximation, quantization reduced precision computing techniques</li>
       <li>Exploring the interplay between precision, performance, power and energy</li>
-      <li>Neural network architectures for resource constrained devices such as IoT and edge devices</li>
       <li>Exploration of new and efficient applications for machine learning</li>
-      <li>Hardware/software techniques to exploit sparsity and locality</li>
-      <li>Machine learning benchmarks, workloads and their characterization</li>
-      <li>Performance potential, limit studies, bottleneck analysis, profiling and synthesis of workloads</li>
+      <li>Characterization of machine learning benchmarks and workloads</li>
+      <li>Performance profiling and synthesis of workloads</li>
       <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
       <li>Power, Performance and Area (PPA) based comparison of neural networks</li>
-      <li>Network pruning, tuning and reconfigurable techniques for efficient neural networks</li>
       <li>Verification, validation and determinism in neural networks</li>
-      <li>Efficient on-device learning techniques -- supervised vs unsupervised</li>
-      <li>Optimizations to improve performance of conventional training techniques</li>
-      <li>Inference vs training comparison and analysis in terms of power, performance and complexity</li>
-      <li>Support vector machines (SVM) based solutions</li>
-      <li>Systolic array based architectures and systems for machine learning applications</li>
+      <li>Efficient on-device learning techniques</li>
       <li>Security, safety and privacy challenges and building secure AI systems</li>
     </ul>
   </div>
