--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -9,3 +9,15 @@ event_date: February 17th, 2019
 event_location: Washington D.C.
 header_image: assets/images/hpca-19.jpg
 ---
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Program</h5>
+        TBD
+    </div>
+</div>
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Sponsors</h5>
+        TBD
+    </div>
+</div>
