--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -10,3 +10,15 @@ event_location: Long Beach, CA
 header_image: assets/images/cvpr-19.jpg
 is_upcomming: True
 ---
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Program</h5>
+        TBD
+    </div>
+</div>
+<div class="row">
+    <div class="col s12">
+        <h5 class="header">Sponsors</h5>
+        TBD
+    </div>
+</div>
