Moved editions header images into own folder.

--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -7,7 +7,7 @@ colocated_long: 23rd ACM International Conference on Architectural Support for P
 colocated_url: https://www.asplos2018.org/
 event_date: March 25th, 2018
 event_location: Williamsburg, VA
-header_image: assets/images/asplos-18.jpg
+header_image: assets/images/editions/asplos-18.jpg
 ---
 <div class="row">
     <div class="col s12">
