--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -7,7 +7,7 @@ colocated_long: 25th IEEE International Symposium on High-Performance Computer A
 colocated_url: http://hpca2019.seas.gwu.edu/
 event_date: February 17th, 2019
 event_location: Washington D.C.
-header_image: assets/images/hpca-19.jpg
+header_image: assets/images/editions/hpca-19.jpg
 ---
 <div class="row">
     <div class="col s12">
