--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -7,7 +7,7 @@ colocated_long: 30th IEEE/CVF Conference on Computer Vision and Pattern Recognit
 colocated_url: http://cvpr2019.thecvf.com/
 event_date: June 16th, 2019
 event_location: Long Beach, CA
-header_image: assets/images/cvpr-19.jpg
+header_image: assets/images/editions/cvpr-19.jpg
 is_upcomming: True
 ---
 <div class="row">
