--- a/program-committee.html
+++ b/program-committee.html
@@ -49,5 +49,17 @@ permalink: /program-committee
 </div>
 
 <div class="row">
-    
+    <h3 class="header">About the Organizers</h3>
 </div>
+{% for o in site.organizers %}
+<div class="row">
+    <div class="col s12">
+        <h5 class="header"><a href="{{ o.profile_url }}" target="_blank">{{ o.name }}</a></h5>
+        <h6 class="header">{{ o.affiliation }}</h6>
+        <a href="{{ o.profile_url }}" target="_blank">
+            <img src="assets/images/organizers/{{ o.avatar }}" class="z-depth-1 responsive-img valign-wrapper avatar-image valign-wrapper" style="float: right;" />
+        </a>
+        <p>{{ o.content | markdownify }}</p>
+    </div>
+</div>
+{% endfor %}
