--- a/program-committee.html
+++ b/program-committee.html
@@ -35,7 +35,7 @@ permalink: /program-committee
             <li>Mahdi Bojnordi, University of Utah</li>
             <li>Krishna Nagar, Intel​</li>
         </ul>
-        <h5 class="header">Submission and Pulbication Chairs Chairs</h5>
+        <h5 class="header">Submission and Publication Chairs</h5>
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
             <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
