Tweaked styles. Framework to generate programs.

--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -1,6 +1,7 @@
 ---
 layout: edition-page
 permalink: /asplos-18
+edition: asplos-18
 edition_number: 1st
 colocated_short: ASPLOS 2018
 colocated_long: 23rd ACM International Conference on Architectural Support for Programming Languages and Operating Systems
@@ -9,15 +10,3 @@ event_date: March 25th, 2018
 event_location: Williamsburg, VA
 header_image: assets/images/editions/asplos-18.jpg
 ---
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Program</h5>
-        TBD
-    </div>
-</div>
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Sponsors</h5>
-        TBD
-    </div>
-</div>
