--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -1,6 +1,7 @@
 ---
 layout: edition-page
 permalink: /hpca-19
+edition: hpca-19
 edition_number: 2nd
 colocated_short: HPCA 2019
 colocated_long: 25th IEEE International Symposium on High-Performance Computer Architecture
@@ -9,15 +10,3 @@ event_date: February 17th, 2019
 event_location: Washington D.C.
 header_image: assets/images/editions/hpca-19.jpg
 ---
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Program</h5>
-        TBD
-    </div>
-</div>
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Sponsors</h5>
-        TBD
-    </div>
-</div>
