--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -1,6 +1,7 @@
 ---
 layout: edition-page
 permalink: /isca-19
+edition: isca-19
 edition_number: 4th
 colocated_short: ISCA 2019
 colocated_long: 46th International Symposium on Computer Architecture
@@ -11,15 +12,3 @@ header_image: assets/images/editions/isca-19.jpg
 is_upcomming: True
 is_accepting_submission: True
 ---
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Program</h5>
-        TBD
-    </div>
-</div>
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Sponsors</h5>
-        TBD
-    </div>
-</div>
