--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -1,6 +1,7 @@
 ---
 layout: edition-page
 permalink: /cvpr-19
+edition: cvpr-19
 edition_number: 3rd
 colocated_short: CVPR 2019
 colocated_long: 30th IEEE/CVF Conference on Computer Vision and Pattern Recognition
@@ -10,15 +11,3 @@ event_location: Long Beach, CA
 header_image: assets/images/editions/cvpr-19.jpg
 is_upcomming: True
 ---
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Program</h5>
-        TBD
-    </div>
-</div>
-<div class="row">
-    <div class="col s12">
-        <h5 class="header">Sponsors</h5>
-        TBD
-    </div>
-</div>
