Visual tweaks and markdow fixes.

--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -6,7 +6,11 @@ edition_number: 2nd
 colocated_short: HPCA 2019
 colocated_long: 25th IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: http://hpca2019.seas.gwu.edu/
-event_date: 02-17-2019
+event_date: 17-02-2019 8:45
 event_location: Washington D.C.
+event_room: Dogwood Room
+event_session: full
 header_image: assets/images/editions/hpca-19.jpg
+is_upcomming: False
+is_accepting_submission: False
 ---
