--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -6,8 +6,11 @@ edition_number: 3rd
 colocated_short: CVPR 2019
 colocated_long: 30th IEEE/CVF Conference on Computer Vision and Pattern Recognition
 colocated_url: http://cvpr2019.thecvf.com/
-event_date: June 16th, 2019
+event_date: 16-06-2019
 event_location: Long Beach, CA
+event_room: Hyatt Shoreline A
+event_session: morning
 header_image: assets/images/editions/cvpr-19.jpg
 is_upcomming: True
+is_accepting_submission: False
 ---
