--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -6,8 +6,10 @@ edition_number: 4th
 colocated_short: ISCA 2019
 colocated_long: 46th International Symposium on Computer Architecture
 colocated_url: https://iscaconf.org/isca2019/
-event_date: June 23rd, 2019
+event_date: 23-06-2019
 event_location: Phoenix, AZ
+event_room: 102B
+event_session: full
 header_image: assets/images/editions/isca-19.jpg
 is_upcomming: True
 is_accepting_submission: True
