Fixed up dates in the programs to sort properly. Other minor fixes.

--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -6,7 +6,7 @@ edition_number: 2nd
 colocated_short: HPCA 2019
 colocated_long: 25th IEEE International Symposium on High-Performance Computer Architecture
 colocated_url: http://hpca2019.seas.gwu.edu/
-event_date: 17-02-2019 8:45
+event_date: 2019-02-17
 event_location: Washington D.C.
 event_room: Dogwood Room
 event_session: full
