--- a/program-committee.html
+++ b/program-committee.html
@@ -2,11 +2,8 @@
 layout: default
 permalink: /program-committee
 ---
-<div class="row">
-    <div class="col s12">
-        <h3 class="header">Committees</h3>
-    </div>
-</div>
+
+<h3 class="header">Committees</h3>
 <div class="row">
     <div class="col s12 m6">
         <h5 class="header">Program Committee</h5>
@@ -48,13 +45,13 @@ permalink: /program-committee
     </div>
 </div>
 
-<div class="row">
-    <h3 class="header">About the Organizers</h3>
-</div>
+<h3 class="header">About the Organizers</h3>
 {% for o in site.organizers %}
 <div class="row">
     <div class="col s12">
-        <h5 class="header"><a href="{{ o.profile_url }}" target="_blank">{{ o.name }}</a></h5>
+        <h5 class="header">
+            <a href="{{ o.profile_url }}" target="_blank">{{ o.name }} <i class="material-icons" style="vertical-align: middle;">link</i></a>
+        </h5>
         <h6 class="header">{{ o.affiliation }}</h6>
         <a href="{{ o.profile_url }}" target="_blank">
             <img src="assets/images/organizers/{{ o.avatar }}" class="z-depth-1 responsive-img valign-wrapper avatar-image valign-wrapper" style="float: right;" />
