--- a/program-committee.html
+++ b/program-committee.html
@@ -6,7 +6,7 @@ permalink: /program-committee
 <h3 class="header">Committees</h3>
 <div class="row">
     <div class="col s12 m6">
-        <h5 class="header">Program Committee</h5>
+        <h4 class="header">Program Committee</h4>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence</li>
             <li>Michael Goldfarb, Nvidia</li>
@@ -26,18 +26,18 @@ permalink: /program-committee
         </ul>
     </div>
     <div class="col s12 m6">
-        <h5 class="header">Publicity and Outreach Chairs</h5>
+        <h4 class="header">Publicity and Outreach Chairs</h4>
         <ul class="browser-default">
             <li>Debu Pal, Cadence</li>
             <li>Mahdi Bojnordi, University of Utah</li>
             <li>Krishna Nagar, Intel​</li>
         </ul>
-        <h5 class="header">Submission and Publication Chairs</h5>
+        <h4 class="header">Submission and Publication Chairs</h4>
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
             <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
         </ul>
-        <h5 class="header">General Chairs</h5>
+        <h4 class="header">General Chairs</h4>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
             <li>Michael Goldfarb, Nvidia (mgoldfarb@nvidia.com)</li>
@@ -49,10 +49,10 @@ permalink: /program-committee
 {% for o in site.organizers %}
 <div class="row">
     <div class="col s12">
-        <h5 class="header">
+        <h4 class="header" style="margin: 0;">
             <a href="{{ o.profile_url }}" target="_blank">{{ o.name }} <i class="material-icons" style="vertical-align: middle;">link</i></a>
-        </h5>
-        <h6 class="header">{{ o.affiliation }}</h6>
+        </h4>
+        <h5 class="header" style="margin: 0;">{{ o.affiliation }}</h5>
         <a href="{{ o.profile_url }}" target="_blank">
             <img src="assets/images/organizers/{{ o.avatar }}" class="z-depth-1 responsive-img valign-wrapper avatar-image valign-wrapper" style="float: right;" />
         </a>
