--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -18,5 +18,5 @@ is_accepting_submission: False
     <p style="padding: 1rem; text-align: left;">
         Due to the half-day schedule and overwhelming responses received, we are forced to skip short paper presentation track from
         the <a href="cvpr-19">3rd edition</a> of EMC2. Please consider submitting your workshop paper to the <a href="isca-19">4th edition</a>
-        of EMC2 co-located with ISCA 2019.</p>
+        co-located with ISCA 2019.</p>
 </blockquote>
