--- a/previous-edditions.html
+++ b/previous-edditions.html
@@ -8,7 +8,8 @@ permalink: /previous-editions
   {% assign editions_rev = site.editions | reverse %}
   {% for ed in editions_rev %}
     <li class="collection-item">
-      <a href="{{ ed.url }}">{{ ed.edition_number }} Edition</a> on {{ ed.event_date }} co-located with <a href="{{ ed.colocated_url }}" target="_blank">{{ ed.colocated_short }}</a>
+      <a href="{{ ed.url }}">{{ ed.edition_number }} Edition</a> co-located with <a href="{{ ed.colocated_url }}" target="_blank">{{ ed.colocated_short }}</a> in {{ ed.event_location }}
+      <span style="float: right;">{{ ed.event_date|date: "%B %d, %Y"}}</span> 
     </li>
   {% endfor %}
 </ul>
