--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ permalink: /index
     <h3 class="header"><i class="material-icons">description</i> Objectives</h3>
     <p>
       As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many
-      new forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the
-      discussion and dialogues on energy efficient techniques for cognitive computing and machine learning particularly
-      for embedded applications and systems. For such resource constrained environments, performance alone is never
-      sufficient, requiring system designers to balance performance with power, energy, and area (overall PPA metric).
+      forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the
+      exploration of energy efficient techniques and architectures for cognitive computing and machine learning, particularly
+      for applications and systems running at the edge. For such resource constrained environments, performance alone is never
+      sufficient, requiring system designers to carefully balance performance with power, energy, and area (overall PPA metric).
     </p>
     <p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of
-      energy efficient machine learning and artificial intelligence for embedded applications. We also hope to psrovide a
+      energy efficient machine learning and artificial intelligence for embedded applications. We also hope to provide a
       solid platform for forging relationships and exchange of ideas between the industry and the academic world through
       discussions and active collaborations.</p>
     <h3 class="header"><i class="material-icons">chat</i> Call for Papers</h3>
@@ -61,20 +61,20 @@ permalink: /index
   <div class="col s12 m6">
     <h3 class="header"><i class="material-icons">format_list_bulleted</i> Topics for the Workshop</h3>
     <ul class="browser-default list">
-      <li>Architectures for IoT, edge devices, automotive, and mobile</li>
-      <li>Power and performance efficient memory architectures suited for neural networks</li>
+      <li>Architectures for the edge: IoT, automotive, and mobile</li>
       <li>Approximation, quantization reduced precision computing</li>
-      <li>Hardware/software techniques to exploit sparsity</li>
+      <li>Hardware/software techniques for sparsity</li>
       <li>Neural network architectures for resource constrained devices</li>
       <li>Neural network pruning, tuning and and automatic architecture search</li>
-      <li>Communication and computation overlapping for better performance and energy</li>
+      <li>Novel memory architectures for machine learing</li>
+      <li>Communication/computation scheduling for better performance and energy</li>
       <li>Load balancing and efficient task distribution techniques</li>
       <li>Exploring the interplay between precision, performance, power and energy</li>
       <li>Exploration of new and efficient applications for machine learning</li>
       <li>Characterization of machine learning benchmarks and workloads</li>
       <li>Performance profiling and synthesis of workloads</li>
       <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
-      <li>Power, Performance and Area (PPA) based comparison of neural networks</li>
+      <li>Power, performance and area (PPA) based comparison of neural networks</li>
       <li>Verification, validation and determinism in neural networks</li>
       <li>Efficient on-device learning techniques</li>
       <li>Security, safety and privacy challenges and building secure AI systems</li>
